1.可自定义本地plist 文件名称 2.可自定义输入框placeHolder

--- a/SwitchHost/urls_1.plist
+++ b/SwitchHost/urls_1.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>IOUsAppUrl</key>
+	<key>baidu</key>
 	<string>http://www.baidu.com</string>
-	<key>UserAppUrl</key>
+	<key>tengxun</key>
 	<string>http://www.baidu.com</string>
 	<key>AppVersionUrl</key>
 	<string>http://www.baidu.com</string>
